Add ringing and calling audio

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <h1>JSsip Browser Phone</h1>
     <div>
       <label>SIP server (with WebSocket support): </label>
-      <input type="text" value="" id="server-address" />
+      <input type="text" value="sip1488.newvats.ru" id="server-address" />
     </div>
     <div>
       <label>Name:</label>
