Change SIP lib to SIP.js

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     </div>
     <div>
       <button id="call-btn">Call Audio</button>
-      <input type="text" value="102" id="call-to" />
+      <input type="text" value="111" id="call-to" />
     </div>
     <div>
       <button id="answer-btn">Answer</button>
@@ -38,10 +38,8 @@
       <button id="hangup-btn">Hangup</button>
     </div>
 
-    <audio autoplay controls id="remote-stream-audio"></audio>
-
     <script src="lib/jquery.min.js"></script>
-    <script src="lib/jssip-3.3.6.min.js"></script>
+    <script src="lib/sip-0.14.6.min.js"></script>
     <script src="src/js/app.js"></script>
     <script src="src/js/webrtc-phone.js"></script>
   </body>
