--- a/index.html
+++ b/index.html
@@ -9,19 +9,19 @@
     <h1>JSsip Browser Phone</h1>
     <div>
       <label>SIP server (with WebSocket support): </label>
-      <input type="text" value="sip1488.newvats.ru" id="server-address" />
+      <input type="text" value="pbx.24erp.ru" id="server-address" />
     </div>
     <div>
       <label>Name:</label>
-      <input type="text" value="101" id="name" />
+      <input type="text" value="200202-test" id="name" />
     </div>
     <div>
       <label>Extension:</label>
-      <input type="text" value="101" id="exten" />
+      <input type="text" value="200202-test" id="exten" />
     </div>
     <div>
       <label>Password:</label>
-      <input type="password" value="101badpassword" id="password" />
+      <input type="password" value="Bgd873" id="password" />
     </div>
 
     <div>
@@ -40,6 +40,7 @@
 
     <script src="lib/jquery.min.js"></script>
     <script src="lib/sip-0.14.6.min.js"></script>
+    <!-- <script src="lib/sip-0.15.10.min.js"></script> -->
     <script src="src/js/app.js"></script>
     <script src="src/js/webrtc-phone.js"></script>
   </body>
